# ThingsDB

./: .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  debug-build.sh  gen_timezones.py  libcurl.supp  main.c  makefile.targets  memleak.supp  migrate.py  release-build.sh  thingsdb-statefulset.yaml  thingsdb.conf  thingsdb.example.conf
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  deploy.yml  release.yml
Debug/: .fact.py.swp  cleantest  makefile  nprintf  objects.mk  sources.mk  subdir.mk  t.py  thingsdb
Debug/inc/: .gitignore
Debug/src/: subdir.mk
MacOS/: makefile  objects.mk  sources.mk  subdir.mk
MacOS/src/: subdir.mk
Release/: makefile  objects.mk  sources.mk  subdir.mk
Release/src/: subdir.mk
certs/: cert.pem  key.pem
connectors/python3/: LICENSE  LICENSE.txt  README.md  api_test.py  connector.py  example.py  requirements.txt  setup.py  socket_test.py  test.py
definition/: definition.py  t.py
docker/: Dockerfile  arm64.Dockerfile  docker-compose.yml  full.Dockerfile  gcloud.Dockerfile  tls.Dockerfile
ext/py/: request.py
ext/requests/: go.sum  main.go  requests
gke/: README.md  configmap.yaml  pdb.yaml  service.yaml  statefulset.yaml
grammar/: export.py  grammar.py  rql.py
grammar/ace/: thingsdb-code.ti  thingsdb-lang.js
grammar/gogrammar/: grammar.go
grammar/jsgrammar/: grammar.js
grammar/pygrammar/: grammar.py
inc/: args.h  cfg.h  clients.h  dbs.h  definition.h  doc.h  doc.inline.h  events.h  ex.h  msgpack.h  nodes.h  props.h  thingsdb.h  ti.h  tiinc.h  users.h
inc/cleri/: choice.h  cleri.h  dup.h  expecting.h  grammar.h  keyword.h  kwcache.h  list.h  node.h  olist.h  optional.h  parse.h  prio.h  ref.h  regex.h  repeat.h  rule.h  sequence.h  this.h  token.h  tokens.h  version.h
inc/imap/: imap.h
inc/lang/: lang.h
inc/langdef/: langdef.h  nd.h  translate.h
inc/lib/: http_parser.c  http_parser.h  simdutf8check.h
inc/msgpack/: pack.h  pack_template.h  sbuffer.h
inc/rql/: access.h  api.h  archive.h  args.h  arr.h  auth.h  back.h  cfg.h  db.h  dbs.h  elem.h  elems.h  event.h  events.h  front.h  inliners.h  item.h  kind.h  lookup.h  maint.h  misc.h  node.h  nodes.h  pkg.h  pool.h  prom.h  prop.h  props.h  proto.h  raw.h  ref.h  req.h  request.h  rql.h  signals.h  sock.h  store.h  task.h  user.h  users.h  (+3 more)
inc/smap/: smap.h
inc/ti/: access.h  addon.h  ano.h  ano.t.h  api.h  api.t.h  archfile.h  archive.h  args.h  arrow.h  async.h  auth.h  away.h  back.h  backup.h  backups.h  build.h  cast.h  cfg.h  chain.h  chained.h  change.h  change.t.h  changes.h  changes.inline.h  changes.t.h  clients.h  closure.h  closure.inline.h  closure.t.h  closurei.h  collection.h  collection.inline.h  collection.t.h  collectioni.h  collections.h  commit.h  commits.h  condition.h  condition.t.h  (+206 more)
inc/util/: argparse.h  base64.h  big.h  buf.h  cfgparser.h  cryptx.h  evt_tls.h  ex.h  filex.h  fx.h  guid.h  imap.h  iso8601.h  link.h  lock.h  logger.h  mpack.h  mpjson.h  olist.h  omap.h  osarch.h  qpx.h  que.h  query.h  queue.h  rbuf.h  res.h  smap.h  strx.h  syncpart.h  util.h  uv_tls.h  vec.h
inc/vec/: vec.h
itest/: Dockerfile  requirements.txt  run_all.py  run_all_tests.py  slow_network_test.sh  t.py  test_advanced.py  test_ano.py  test_arguments.py  test_backup.py  test_changes.py  test_collection_functions.py  test_commits.py  test_datetime.py  test_dict.py  test_doc_url.py  test_enum.py  test_events.py  test_future.py  test_gc.py  test_http_api.py  test_import.py  test_index_slice.py  test_math.py  test_migrate.py  test_modules.py  test_multi_node.py  test_multinode.py  test_nested.py  test_node_functions.py  test_nodes.py  test_operators.py  test_pre_restore.py  test_procedure_functions.py  test_procedures.py  test_py.py  test_recovery.py  test_relations.py  test_restriction.py  test_room.py  (+22 more)
itest/lib/: __init__.py  args.py  cleanup.py  client.py  color.py  node.py  target.py  testbase.py  vars.py
itest/testdir/: ti_.qp
itest/testdir_/: t0.conf  t1.conf  t2.conf
itest/ws/: index.html  package-lock.json  package.json
misc/: logo.xcf
module/: __init__.py
modules/demo/: main.go
modules/python/: demo.py
modules/requests/: close.pkg  go.sum  main.go  mkpkg.py  requests
modules/siridb/: main.go
src/: args.c  cfg.c  clients.c  dbs.c  definition.c  events.c  ex.c  nodes.c  props.c  thingsdb.c  ti.c  users.c
src/cleri/: choice.c  cleri.c  dup.c  expecting.c  grammar.c  keyword.c  kwcache.c  list.c  node.c  olist.c  optional.c  parse.c  prio.c  ref.c  regex.c  repeat.c  rule.c  sequence.c  this.c  token.c  tokens.c  version.c
src/imap/: imap.c
test/: new_test.py  run_tests.sh  test.h  test.py  test.sh  test_guid.c  test_guid.h  test_guid.sh  test_imap.c  test_imap.sh  test_link.c  test_lookup.c  test_lookup.h  test_lookup.sh  test_queue.c  test_queue.sh  test_smap.c  test_smap.sh  test_vec.c
(+915 files in other folders)
